# wap-testing-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  settings.py
framework/devices/: device_manager.py
framework/fixtures/: pages.py
framework/pom/: base_page.py
framework/pom/activity_page/: activity_page.py
framework/pom/activity_page/locators/: activity_page_locators.py
framework/pom/bottom_menu/: bottom_menu.py
framework/pom/bottom_menu/locators/: bottom_menu_locators.py
framework/pom/browse_page/: browse_page.py
framework/pom/browse_page/locators/: browse_page_locators.py
framework/pom/category_page/: category_page.py
framework/pom/category_page/locators/: category_page_locators.py
framework/pom/home_page/: home_page.py
framework/pom/profile_page/: profile_page.py
framework/pom/profile_page/locators/: profile_page_locators.py
framework/pom/stream_page/: stream_page.py
framework/pom/stream_page/locators/: stream_page_locators.py  stream_popup_locators.py
framework/pom/streamer_profile_page/: streamer_profile_page.py
framework/pom/streamer_profile_page/locators/: streamer_profile_page_locators.py
framework/reporter/: reporter.py
framework/sut/: urls.py
tests/streamer_profile/: streamer_profile_page_test.py
utilities/: file_management.py
